정유진 커밋 완료. 완벽하게 수미상관 구조를 구현해봤어요

--- a/test.html
+++ b/test.html
@@ -10,5 +10,8 @@
 	<h1>안녕하세요</h1>
     <h1>라고 말하며 그는 손을 흔들었다.</h1>
     <h1>도를 믿으시나요</h1>
+    <h1>그의 말을 무시하고 나는 가던 길을 다시 걸어갔다.</h1>
+    <h1>그런데 누군가 또 다가와 인사했다.</h1>
+    <h1>안녕하세요</h1>
 </body>
 </html>
